jilles      2006/12/25 11:47:41 UTC	(20061225-7389)
  Log:
  Fix flatfile storage of chanacs metadata on account access entries.
  

  Changes:	Modified:
  +1 -1		trunk/backend/flatfile.c (File Modified) 


jilles      2006/12/24 17:48:16 UTC	(20061224-7387)
  Log:
  Move help for /cs halfop to a separate helpfile
  so it doesn't clutter up the help for ircds that
  don't support halfops.
  

  Changes:	Modified:
  +14 -0	trunk/help/cservice/halfop (File Added) 
  +1 -4		trunk/help/cservice/op_voice (File Modified) 
  +2 -2		trunk/modules/chanserv/halfop.c (File Modified) 


jilles      2006/12/24 17:47:33 UTC	(20061224-7385)
  Log:
  Mention hub_mask or similar for ircd configuration.
  

  Changes:	Modified:
  +3 -1		trunk/INSTALL (File Modified) 


jilles      2006/12/23 22:54:17 UTC	(20061223-7383)
  Log:
  Add an example usage for the user_can_register hook.
  

  Changes:	Modified:
  +53 -0	trunk/contrib/gen_regcheckemail.c (File Added) 


jilles      2006/12/23 22:53:28 UTC	(20061223-7381)
  Log:
  Add user_can_register hook, allows modules to abort
  account registrations before they go through.
  

  Changes:	Modified:
  +1 -0		trunk/doc/HOOKS (File Modified) 
  +7 -0		trunk/include/account.h (File Modified) 
  +9 -0		trunk/modules/nickserv/register.c (File Modified) 


jilles      2006/12/17 23:03:52 UTC	(20061217-7379)
  Log:
  Change what happens when a service is deopped:
  - if a service has already been deopped in this mode change,
    skip it if it is the same service, otherwise reop from that service
  - otherwise, if the service is alone in the channel, reop it from
    another service (the protocol module will arrange for this to work,
    e.g. by sending from the server if necessary)
  - otherwise, part and join as before
  
  Note that this has nothing to do with deops implicit
  in lowerTS BURST/FJOIN/JOIN/SJOIN.
  

  Changes:	Modified:
  +30 -8	trunk/src/cmode.c (File Modified) 


jilles      2006/12/16 15:59:44 UTC	(20061216-7377)
  Log: