@@ -1,3 +1,12 @@
+jilles      2006/12/25 12:25:15 UTC	(20061225-7391)
+  Log:
+  Free chanacs metadata when removing chanacs.
+  
+
+  Changes:	Modified:
+  +16 -2	trunk/src/account.c (File Modified) 
+
+
 jilles      2006/12/25 11:47:41 UTC	(20061225-7389)
   Log:
   Fix flatfile storage of chanacs metadata on account access entries.
